--- a/src/main/resources/fxml/Ventas/ClientesVista.fxml
+++ b/src/main/resources/fxml/Ventas/ClientesVista.fxml
@@ -14,8 +14,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.ClientesVistaController">
    <children>
       <AnchorPane layoutX="53.0" layoutY="53.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -32,15 +31,15 @@
             </AnchorPane>
             <AnchorPane layoutX="40.0" layoutY="84.0" prefHeight="222.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <TextField layoutX="130.0" layoutY="62.0" prefHeight="25.0" prefWidth="106.0" />
-                  <Button layoutX="176.0" layoutY="196.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+                  <TextField fx:id="dniBusq" layoutX="130.0" layoutY="62.0" prefHeight="25.0" prefWidth="106.0" />
+                  <Button fx:id="buscafBttn" layoutX="176.0" layoutY="196.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
                   <Label layoutX="12.0" layoutY="30.0" prefHeight="21.0" prefWidth="114.0" text="R.U.C.:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox layoutX="130.0" layoutY="165.0" prefHeight="25.0" prefWidth="106.0" />
-                  <TextField layoutX="130.0" layoutY="28.0" prefHeight="25.0" prefWidth="106.0" />
+                  <ComboBox fx:id="estadoBusq" layoutX="130.0" layoutY="165.0" prefHeight="25.0" prefWidth="106.0" />
+                  <TextField fx:id="rucBusq" layoutX="130.0" layoutY="28.0" prefHeight="25.0" prefWidth="106.0" />
                   <Label layoutX="12.0" layoutY="64.0" prefHeight="21.0" prefWidth="114.0" text="D.N.I.:">
                      <font>
                         <Font size="14.0" />
@@ -56,13 +55,13 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="130.0" layoutY="96.0" prefHeight="25.0" prefWidth="106.0" />
+                  <TextField fx:id="razSocial" layoutX="130.0" layoutY="96.0" prefHeight="25.0" prefWidth="106.0" />
                   <Label layoutX="12.0" layoutY="133.0" prefHeight="21.0" prefWidth="114.0" text="Nombre:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="130.0" layoutY="130.0" prefHeight="25.0" prefWidth="106.0" />
+                  <TextField fx:id="nombreBusq" layoutX="130.0" layoutY="130.0" prefHeight="25.0" prefWidth="106.0" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="29.0" layoutY="342.0" prefHeight="300.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="272.0">
@@ -73,7 +72,7 @@
                         <TableColumn prefWidth="147.33333587646484" text="Cliente" />
                      </columns>
                   </TableView>
-                  <Button layoutX="140.0" layoutY="271.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+                  <Button fx:id="visualizarBttn" layoutX="140.0" layoutY="271.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
                </children>
             </AnchorPane>
          </children>
@@ -122,30 +121,30 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="71.0" layoutY="12.0" prefHeight="25.0" prefWidth="353.0" />
-                  <TextField editable="false" layoutX="71.0" layoutY="65.0" prefHeight="25.0" prefWidth="120.0" />
-                  <TextField layoutX="117.0" layoutY="250.0" prefHeight="25.0" prefWidth="604.0" />
-                  <TextField layoutX="117.0" layoutY="281.0" prefHeight="25.0" prefWidth="604.0" />
-                  <CheckBox layoutX="14.0" layoutY="43.0" mnemonicParsing="false" text="¿Es persona natural?" />
-                  <CheckBox layoutX="14.0" layoutY="94.0" mnemonicParsing="false" text="¿Es persona jurídica?" />
+                  <TextField fx:id="clienteSh" layoutX="71.0" layoutY="12.0" prefHeight="25.0" prefWidth="353.0" />
+                  <TextField fx:id="dni" editable="false" layoutX="71.0" layoutY="65.0" prefHeight="25.0" prefWidth="120.0" />
+                  <TextField fx:id="envioDir" layoutX="117.0" layoutY="250.0" prefHeight="25.0" prefWidth="604.0" />
+                  <TextField fx:id="factDir" layoutX="117.0" layoutY="281.0" prefHeight="25.0" prefWidth="604.0" />
+                  <CheckBox fx:id="persoNatu" layoutX="14.0" layoutY="43.0" mnemonicParsing="false" text="¿Es persona natural?" />
+                  <CheckBox fx:id="persoJuri" layoutX="14.0" layoutY="94.0" mnemonicParsing="false" text="¿Es persona jurídica?" />
                   <Label layoutX="13.0" layoutY="115.0" text="R.U.C.:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField editable="false" layoutX="72.0" layoutY="113.0" prefHeight="25.0" prefWidth="120.0" />
+                  <TextField fx:id="ruc" editable="false" layoutX="72.0" layoutY="113.0" prefHeight="25.0" prefWidth="120.0" />
                   <Label layoutX="203.0" layoutY="116.0" text="Representante legal:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="339.0" layoutY="115.0" prefHeight="25.0" prefWidth="353.0" />
+                  <TextField fx:id="repLegal" layoutX="339.0" layoutY="115.0" prefHeight="25.0" prefWidth="353.0" />
                   <Label layoutX="14.0" layoutY="144.0" text="Rubro:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField editable="false" layoutX="72.0" layoutY="143.0" prefHeight="25.0" prefWidth="120.0" />
+                  <TextField fx:id="rubro" editable="false" layoutX="72.0" layoutY="143.0" prefHeight="25.0" prefWidth="120.0" />
                   <Label layoutX="14.0" layoutY="189.0" text="E-mail:">
                      <font>
                         <Font size="14.0" />
@@ -161,17 +160,17 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField editable="false" layoutX="118.0" layoutY="310.0" prefHeight="25.0" prefWidth="120.0" />
+                  <TextField fx:id="telf" editable="false" layoutX="118.0" layoutY="310.0" prefHeight="25.0" prefWidth="120.0" />
                   <Label layoutX="14.0" layoutY="348.0" text="Anotaciones:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextArea layoutX="152.0" layoutY="388.0" prefHeight="139.0" prefWidth="603.0" AnchorPane.leftAnchor="118.0" AnchorPane.topAnchor="368.0" />
+                  <TextArea fx:id="anotaciones" layoutX="152.0" layoutY="388.0" prefHeight="139.0" prefWidth="603.0" AnchorPane.leftAnchor="118.0" AnchorPane.topAnchor="368.0" />
                </children>
             </AnchorPane>
-            <TextField layoutX="116.0" layoutY="222.0" prefHeight="25.0" prefWidth="353.0" AnchorPane.topAnchor="270.0" />
-            <TextField layoutX="117.0" layoutY="240.0" prefHeight="25.0" prefWidth="353.0" />
+            <TextField fx:id="web" layoutX="116.0" layoutY="222.0" prefHeight="25.0" prefWidth="353.0" AnchorPane.topAnchor="270.0" />
+            <TextField fx:id="correo" layoutX="117.0" layoutY="240.0" prefHeight="25.0" prefWidth="353.0" />
          </children>
       </AnchorPane>
    </children>
