--- a/src/main/resources/fxml/Materiales/Productos/Form.fxml
+++ b/src/main/resources/fxml/Materiales/Productos/Form.fxml
@@ -1,11 +1,244 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="195.0" layoutY="96.0" mnemonicParsing="false" text="Button" />
+      <AnchorPane layoutY="9.0" prefHeight="578.0" prefWidth="1010.0">
+         <children>
+            <TabPane layoutY="56.0" prefHeight="522.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE">
+               <tabs>
+                  <Tab text="General">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="24.0" layoutY="50.0" text="Nombre del producto">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="27.0" layoutY="98.0" text="Tipo del producto">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="27.0" layoutY="139.0" text="Fecha de adquisición">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="27.0" layoutY="184.0" text="Descripción del producto">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="400.0" layoutY="98.0" text="Precio">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="400.0" layoutY="140.0" text="Fecha de vencimiento">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <TextField layoutX="204.0" layoutY="48.0" prefHeight="25.0" prefWidth="488.0" />
+                              <ComboBox layoutX="204.0" layoutY="95.0" prefHeight="25.0" prefWidth="173.0" />
+                              <TextField layoutX="543.0" layoutY="103.0" />
+                              <DatePicker layoutX="204.0" layoutY="137.0" />
+                              <DatePicker layoutX="544.0" layoutY="138.0" prefHeight="25.0" prefWidth="147.0" />
+                              <TextArea layoutX="204.0" layoutY="184.0" prefHeight="153.0" prefWidth="490.0" />
+                              <CheckBox layoutX="618.0" layoutY="354.0" mnemonicParsing="false" text="Activo" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+                  <Tab text="Distribución">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="24.0" layoutY="50.0" text="Almacén">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="24.0" layoutY="91.0" text="Racks">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox layoutX="197.0" layoutY="48.0" prefHeight="20.0" prefWidth="457.0" />
+                              <TableView layoutX="24.0" layoutY="142.0" prefHeight="289.0" prefWidth="423.0">
+                                 <columns>
+                                    <TableColumn prefWidth="151.0" text="Código de Rack" />
+                                    <TableColumn prefWidth="271.0" text="Cantidad disponible" />
+                                 </columns>
+                              </TableView>
+                              <TitledPane animated="false" collapsible="false" layoutX="503.0" layoutY="142.0" prefHeight="273.0" prefWidth="177.0" text="Acciones">
+                                 <content>
+                                    <AnchorPane prefHeight="239.0" prefWidth="175.0">
+                                       <children>
+                                          <Button layoutX="68.0" layoutY="41.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="41.0" />
+                                          <Button layoutX="68.0" layoutY="122.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                                          <Label layoutX="72.0" layoutY="93.0" text="Ingresar" />
+                                          <Label layoutX="66.0" layoutY="164.0" text="Movimiento" />
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </TitledPane>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+                  <Tab text="Detalle">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Pane layoutX="14.0" layoutY="37.0" prefHeight="166.0" prefWidth="700.0" style="-fx-border-color: black;">
+                                 <children>
+                                    <Label layoutX="14.0" layoutY="14.0" text="Características">
+                                       <font>
+                                          <Font size="20.0" />
+                                       </font>
+                                    </Label>
+                                    <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
+                                    <Label layoutX="21.0" layoutY="68.0" text="Largo">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="443.0" layoutY="73.0" text="Peso">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="152.0" layoutY="68.0" text="Alto">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="21.0" layoutY="111.0" text="Unidades">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="254.0" layoutY="68.0" text="Ancho">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="443.0" layoutY="112.0" text="Unidades">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField layoutX="90.0" layoutY="66.0" prefHeight="25.0" prefWidth="53.0" />
+                                    <TextField layoutX="188.0" layoutY="66.0" prefHeight="25.0" prefWidth="53.0" />
+                                    <TextField layoutX="303.0" layoutY="66.0" prefHeight="25.0" prefWidth="53.0" />
+                                    <ComboBox layoutX="90.0" layoutY="109.0" prefWidth="150.0" />
+                                    <TextField layoutX="526.0" layoutY="66.0" prefHeight="25.0" prefWidth="53.0" />
+                                    <ComboBox layoutX="526.0" layoutY="109.0" prefWidth="150.0" />
+                                 </children>
+                              </Pane>
+                              <Pane layoutX="14.0" layoutY="218.0" prefHeight="250.0" prefWidth="700.0" style="-fx-border-color: black;">
+                                 <children>
+                                    <Label layoutX="14.0" layoutY="14.0" text="Inventario">
+                                       <font>
+                                          <Font size="20.0" />
+                                       </font>
+                                    </Label>
+                                    <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
+                                    <Label layoutX="22.0" layoutY="61.0" text="Ubicacion en almacen">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="125.0" layoutY="119.0" text="Separados">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="125.0" layoutY="148.0" text="No disponibles">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="124.0" layoutY="176.0" text="Envio directo">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="393.0" layoutY="91.0" text="En orden">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="393.0" layoutY="119.0" text="Comprometidos">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="124.0" layoutY="207.0" text="Disponible para la venta">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="393.0" layoutY="207.0" text="Disponible para escoger">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="124.0" layoutY="91.0" text="Cantidad en almacen">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="301.0" layoutY="90.0" text="0" />
+                                    <Label layoutX="301.0" layoutY="121.0" text="0" />
+                                    <Label layoutX="301.0" layoutY="150.0" text="0" />
+                                    <Label layoutX="301.0" layoutY="178.0" text="0" />
+                                    <Label layoutX="301.0" layoutY="209.0" text="0" />
+                                    <Label layoutX="559.0" layoutY="93.0" text="0" />
+                                    <Label layoutX="559.0" layoutY="121.0" text="0" />
+                                    <Label layoutX="559.0" layoutY="209.0" text="0" />
+                                    <Line endX="100.0" layoutX="218.0" layoutY="202.0" startX="-100.0" />
+                                    <Line endX="100.0" layoutX="487.0" layoutY="202.0" startX="-100.0" />
+                                 </children>
+                              </Pane>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+               </tabs>
+            </TabPane>
+            <Pane prefHeight="50.0" prefWidth="1000.0">
+               <children>
+                  <Label layoutX="133.0" layoutY="10.0" text="Detalle del Producto">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                  <Line endX="600.0" layoutX="133.0" layoutY="50.0" startX="-100.0" />
+               </children>
+            </Pane>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
