--- a/src/main/resources/fxml/Materiales/Productos/Index.fxml
+++ b/src/main/resources/fxml/Materiales/Productos/Index.fxml
@@ -1,11 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="165.0" layoutY="65.0" mnemonicParsing="false" text="Button" />
+      <AnchorPane layoutX="7.0" layoutY="7.0" prefHeight="575.0" prefWidth="1000.0">
+         <children>
+            <Pane layoutX="232.0" layoutY="14.0" prefHeight="50.0" prefWidth="250.0">
+               <children>
+                  <Label layoutX="82.0" layoutY="10.0" text="Búsqueda">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="17.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </Pane>
+            <Label layoutX="248.0" layoutY="83.0" prefHeight="21.0" prefWidth="114.0" text="Código producto">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="248.0" layoutY="121.0" prefHeight="21.0" prefWidth="114.0" text="Descripción">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="246.0" layoutY="158.0" text="Fecho de ingreso">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField layoutX="364.0" layoutY="83.0" prefHeight="25.0" prefWidth="106.0" />
+            <TextField layoutX="364.0" layoutY="121.0" prefHeight="25.0" prefWidth="106.0" />
+            <DatePicker layoutX="364.0" layoutY="155.0" prefHeight="25.0" prefWidth="106.0" />
+            <TableView layoutX="246.0" layoutY="203.0" prefHeight="202.0" prefWidth="224.0">
+               <columns>
+                  <TableColumn prefWidth="65.0" text="Código" />
+                  <TableColumn prefWidth="158.0" text="Descripción" />
+               </columns>
+            </TableView>
+            <Label layoutX="246.0" layoutY="424.0" text="Ubicación" />
+            <Label layoutX="245.0" layoutY="460.0" text="Cantidad en almacen" />
+            <Label layoutX="247.0" layoutY="493.0" text="Disponible para venta" />
+            <TextField layoutX="430.0" layoutY="420.0" prefHeight="21.0" prefWidth="40.0" />
+            <TextField layoutX="430.0" layoutY="456.0" prefHeight="20.0" prefWidth="40.0" />
+            <TextField layoutX="430.0" layoutY="489.0" prefHeight="20.0" prefWidth="40.0" />
+            <Button layoutX="374.0" layoutY="537.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
