--- a/src/main/resources/fxml/Materiales/Producto/Index.fxml
+++ b/src/main/resources/fxml/Materiales/Producto/Index.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +16,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.ProductoController">
    <children>
       <AnchorPane layoutX="7.0" layoutY="7.0" prefHeight="575.0" prefWidth="1000.0">
          <children>
@@ -56,6 +61,7 @@
             <TextField layoutX="430.0" layoutY="456.0" prefHeight="20.0" prefWidth="40.0" />
             <TextField layoutX="430.0" layoutY="489.0" prefHeight="20.0" prefWidth="40.0" />
             <Button layoutX="374.0" layoutY="537.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+            <Button layoutX="575.0" layoutY="91.0" mnemonicParsing="false" onAction="#abrirNuevoFormulario" text="Nuevo" />
          </children>
       </AnchorPane>
    </children>
