--- a/src/main/resources/fxml/RecursosHumanos/Usuario/Index.fxml
+++ b/src/main/resources/fxml/RecursosHumanos/Usuario/Index.fxml
@@ -6,22 +6,30 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.UsuariosController">
    <children>
-      <TitledPane animated="false" layoutX="14.0" layoutY="14.0" prefHeight="206.0" prefWidth="973.0" text="Usuario:">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="27.0" prefWidth="971.0">
-               <children>
-                  <Label layoutX="14.0" layoutY="14.0" text="Nombre:" />
-                  <TextField layoutX="70.0" layoutY="10.0" />
-                  <TextField layoutX="305.0" layoutY="10.0" />
-                  <Label layoutX="249.0" layoutY="14.0" text="Apellido:" />
-                  <Label layoutX="486.0" layoutY="14.0" text="Apellido:" />
-                  <TextField layoutX="542.0" layoutY="10.0" />
-               </children>
-            </AnchorPane>
-        </content>
-      </TitledPane>
+      <Label layoutX="89.0" layoutY="32.0" text="Usuarios" />
+    <AnchorPane layoutX="38.0" layoutY="72.0" minHeight="0.0" minWidth="0.0" prefHeight="112.0" prefWidth="969.0">
+         <children>
+            <Label layoutX="14.0" layoutY="35.0" text="Nombre:" />
+            <TextField layoutX="70.0" layoutY="31.0" />
+            <TextField layoutX="305.0" layoutY="31.0" />
+            <Label layoutX="249.0" layoutY="35.0" text="Apellido:" />
+            <Label layoutX="486.0" layoutY="35.0" text="Correo" />
+            <TextField layoutX="542.0" layoutY="31.0" />
+            <Button layoutX="305.0" layoutY="73.0" mnemonicParsing="false" text="Buscar" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="38.0" layoutY="184.0" prefHeight="331.0" prefWidth="683.0">
+         <children>
+            <TableView layoutX="134.0" layoutY="48.0" prefHeight="200.0" prefWidth="366.0">
+              <columns>
+                <TableColumn prefWidth="111.0" text="Nombre" />
+                <TableColumn prefWidth="113.0" text="Apellido" />
+                  <TableColumn prefWidth="141.0" text="Correo" />
+              </columns>
+            </TableView>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
