--- a/src/main/resources/fxml/RecursosHumanos/Usuario/Form.fxml
+++ b/src/main/resources/fxml/RecursosHumanos/Usuario/Form.fxml
@@ -6,6 +6,30 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+<AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label layoutX="30.0" layoutY="25.0" text="Detalle de usuario" />
+      <AnchorPane layoutX="21.0" layoutY="55.0" prefHeight="183.0" prefWidth="923.0">
+         <children>
+            <Label layoutX="8.0" layoutY="6.0" text="Información General" />
+            <Label layoutX="25.0" layoutY="41.0" text="Nombre:" />
+            <TextField layoutX="86.0" layoutY="37.0" />
+            <TextField layoutX="327.0" layoutY="37.0" />
+            <Label layoutX="266.0" layoutY="41.0" text="Apellido:" />
+            <TextField layoutX="86.0" layoutY="86.0" />
+            <Label layoutX="25.0" layoutY="90.0" text="Nombre:" />
+            <TextField layoutX="327.0" layoutY="77.0" />
+            <Label layoutX="266.0" layoutY="81.0" text="Nombre:" />
+            <TextField layoutX="86.0" layoutY="124.0" />
+            <Label layoutX="25.0" layoutY="128.0" text="Nombre:" />
+         </children>
+      </AnchorPane>
+      <Label layoutX="30.0" layoutY="251.0" text="Permisos" />
+      <AnchorPane layoutX="71.0" layoutY="302.0" prefHeight="200.0" prefWidth="735.0">
+         <children>
+            <ListView layoutX="79.0" layoutY="25.0" prefHeight="120.0" prefWidth="368.0" />
+         </children>
+      </AnchorPane>
+      <Button id="AnchorPane" layoutX="310.0" layoutY="515.0" mnemonicParsing="false" text="Atrás" />
+   </children>
 </AnchorPane>
