--- a/src/main/resources/fxml/RecursosHumanos/Usuario/Index.fxml
+++ b/src/main/resources/fxml/RecursosHumanos/Usuario/Index.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -8,7 +10,16 @@
 
 <AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.Usuarios.UsuariosController">
    <children>
-      <Label layoutX="89.0" layoutY="32.0" text="Usuarios" />
+      <Pane prefHeight="63.0" prefWidth="636.0">
+         <children>
+            <Label layoutX="31.0" layoutY="14.0" text="Usuarios">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Line endX="600.0" layoutX="131.0" layoutY="49.0" startX="-100.0" />
+         </children>
+      </Pane>
     <AnchorPane layoutX="38.0" layoutY="72.0" minHeight="0.0" minWidth="0.0" prefHeight="112.0" prefWidth="969.0">
          <children>
             <Label layoutX="14.0" layoutY="35.0" text="Nombre:" />
@@ -19,16 +30,16 @@
             <TextField fx:id="CorreoUsuario" layoutX="542.0" layoutY="31.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="38.0" layoutY="184.0" prefHeight="331.0" prefWidth="683.0">
+      <AnchorPane layoutX="38.0" layoutY="184.0" prefHeight="370.0" prefWidth="931.0">
          <children>
-            <TableView fx:id="TablaUsuarios" layoutX="134.0" layoutY="48.0" prefHeight="200.0" prefWidth="366.0">
+            <TableView fx:id="TablaUsuarios" layoutX="134.0" layoutY="48.0" prefHeight="269.0" prefWidth="645.0">
               <columns>
-                <TableColumn fx:id="ColumnaNombre" prefWidth="111.0" text="Nombre" />
-                <TableColumn fx:id="ColumnaApellido" prefWidth="113.0" text="Apellido" />
-                  <TableColumn fx:id="ColumnaCorreo" prefWidth="141.0" text="Correo" />
+                <TableColumn fx:id="ColumnaNombre" prefWidth="155.0" text="Nombre" />
+                <TableColumn fx:id="ColumnaApellido" prefWidth="219.0" text="Apellido" />
+                  <TableColumn fx:id="ColumnaCorreo" prefWidth="270.0" text="Correo" />
               </columns>
             </TableView>
-            <Button id="AnchorPane" layoutX="291.0" layoutY="278.0" mnemonicParsing="false" onAction="#abrirDetalleUsuario" text="Visualizar" />
+            <Button id="AnchorPane" layoutX="433.0" layoutY="331.0" mnemonicParsing="false" onAction="#abrirDetalleUsuario" text="Visualizar" />
          </children>
       </AnchorPane>
    </children>
