--- a/src/main/resources/fxml/General/ReporteDeErrores/Index.fxml
+++ b/src/main/resources/fxml/General/ReporteDeErrores/Index.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.General.ReporteDeErrores.ReporteDeErroresController">
    <children>
       <CheckBox layoutX="38.0" layoutY="60.0" mnemonicParsing="false" text="Entre" />
       <DatePicker layoutX="83.0" layoutY="22.0" />
