--- a/src/main/resources/fxml/Materiales/Producto/Producto.fxml
+++ b/src/main/resources/fxml/Materiales/Producto/Producto.fxml
@@ -147,7 +147,7 @@
                             <content>
                                <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                   <children>
-                                    <TitledPane animated="false" layoutX="14.0" layoutY="27.0" prefHeight="143.0" prefWidth="701.0" text="Características">
+                                    <TitledPane animated="false" collapsible="false" layoutX="14.0" layoutY="27.0" prefHeight="143.0" prefWidth="701.0" text="Características">
                                       <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="111.0" prefWidth="699.0">
                                              <children>
@@ -191,7 +191,7 @@
                                           </AnchorPane>
                                       </content>
                                     </TitledPane>
-                                    <TitledPane animated="false" layoutX="14.0" layoutY="191.0" prefHeight="264.0" prefWidth="701.0" text="Inventario">
+                                    <TitledPane animated="false" collapsible="false" layoutX="14.0" layoutY="191.0" prefHeight="264.0" prefWidth="701.0" text="Inventario">
                                       <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="238.0" prefWidth="657.0">
                                              <children>
