--- a/src/main/resources/fxml/Materiales/Rack/Rack.fxml
+++ b/src/main/resources/fxml/Materiales/Rack/Rack.fxml
@@ -68,7 +68,7 @@
                         </AnchorPane>
                      </content>
                   </TitledPane>
-                  <TitledPane animated="false" layoutX="51.0" layoutY="33.0" prefHeight="160.0" prefWidth="656.0" text="Información General">
+                  <TitledPane animated="false" collapsible="false" layoutX="51.0" layoutY="33.0" prefHeight="160.0" prefWidth="656.0" text="Información General">
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
